--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Image/restaurant.png">
-    <link rel="stylesheet" href="Icon/fontawesome-free-6.4.2-web/css/all.min.css">
+    <link rel="stylesheet" href="CSS/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>The Dine House</title>
 </head>
 
@@ -290,9 +290,9 @@
     </div>
 
 
-    <script src="code.jquery.com_jquery-1.12.4.min.js"></script>
-    <script src="bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="JS/code.jquery.com_jquery-1.12.4.min.js"></script>
+    <script src="JS/bootstrap.bundle.min.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
